# Screen_Capture_Project_official

./: CMakeLists.txt  a.out  cmd
include/: ScreenRecorder.h
libav-11.12/lib/: avcodec-58.def
src/: ScreenRecorder.cpp  ScreenRecorder.h  main.cpp
